<resources>
    <string name="app_name">Messenger</string>
    <string name="mail">Введите почту</string>
    <string name="password">Введите пароль</string>
    <string name="log_in">Войти</string>
    <string name="logging">Войти в аккаунт</string>
    <string name="login_fail">Не удалось войти</string>
    <string name="fail_register">Такой аккаунт не зарегистрирован</string>
    <string name="register">Зарегистрироваться</string>
    <string name="registration">Регистрация</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="passwords_doesnt_match">Пароли не совпадают</string>
    <string name="select_file">Выбрать картинку</string>
    <string name="image_fail">Не удалось загрузить картинку</string>
    <string name="nick">Введите ник</string>
    <string name="not_filled">Не все поля заполнены</string>
    <string name="user_fail">Не удалось загрузить пользователя</string>
    <string name="add_chat">Добавить чат</string>
    <string name="enter_email">Введите почту пользователя</string>
    <string name="create_chat">Создать чат</string>
    <string name="cancel">Отмена</string>
    <string name="unauthorized">Вы не авторизованы</string>
    <string name="no_user">Такого пользователя не существует</string>
    <string name="profile">Профиль</string>
    <string name="back">Назад</string>
    <string name="logout">Выйти</string>
    <string name="userEmail">Почта:</string>
    <string name="unsafe_connection">Чат не зашифрован. Пусть другой пользователь откроет приложение</string>
</resources>